--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <BODY background="C:\Users\maria\Downloads\MarianaYoko-site\marianayoko-sites\img\papel-de-parede-rosa-bebe-faixa-de-parede-personalizada.jpg">
+    <BODY background="\img\papel-de-parede-rosa-bebe-faixa-de-parede-personalizada.jpg">
     <main>
         <!--Photo-->
         <div class="container-fluid photo" id="top">
