--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <BODY background="\img\papel-de-parede-rosa-bebe-faixa-de-parede-personalizada.jpg">
+    <BODY background="./img/papel-de-parede-rosa-bebe-faixa-de-parede-personalizada.jpg">
     <main>
         <!--Photo-->
         <div class="container-fluid photo" id="top">
@@ -34,7 +34,7 @@
                     <p>
                         <!-- Altere aqui o seu avatar. Utilizar proporção de 1:1 (Quadrado)-->
                         <div>
-                            <img src="C:\Users\maria\Downloads\MarianaYoko-site\marianayoko-sites\img\mari.jpg">
+                            <img src="./img/mari.jpg">
                         </div>
                     </p>
                 </div>
