--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Mariana Yoko">
     <meta property="og:description" content="A MydesignerGráfica é uma pequena empresa de mídias sociais e marketing digital para pequenas e médias empresas, e também artesã, empreendedora e programadora.">
-    <meta property="og:image" content="/img/mari200x200.jpg">
+    <meta property="og:image" content="./img/mari200x200.jpg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <meta property="og:url" content="https://marianayoko.github.io/Mariana-designer/">
@@ -21,7 +21,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Mariana">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="apple-touch-icon" size="180x180" href="/img/mari180x180.png">
+    <link rel="apple-touch-icon" size="180x180" href="./img/mari180x180.png">
 
     
     <!-- Favicon / Trocar a URL -->
