--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="apple-mobile-web-app-title" content="Mariana">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="apple-touch-icon" size="180x180" href="./img/mari180x180.png">
+    <link rel="icon" type="image/png" href="./img/mari180x180.png">
 
     
     <!-- Favicon / Trocar a URL -->
