--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </div>
                     </a>
 
-                    <a href="https://www.facebook.com/MarianaDesignerG" target="_blank" 
+                    <a href="https://web.facebook.com/MarianaDesignerG" target="_blank"  
                     class="botao social-icon">
                         <div class="col-12 d-flex flex-wrap align-items-center">
                             <div class="col-2">
